--- a/Umbrella/Umbrella.csproj
+++ b/Umbrella/Umbrella.csproj
@@ -141,7 +141,8 @@
   <ItemGroup>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\views\Shared\site.css" />
+    <Content Include="Scripts\views\Shared\site.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -159,6 +160,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\libs\" />
+    <Folder Include="Scripts\views\Home\" />
+    <Folder Include="Scripts\views\Pollmaker\" />
     <Folder Include="Views\Pollmaker\" />
   </ItemGroup>
   <ItemGroup>
