--- a/Umbrella/Umbrella/Umbrella.csproj
+++ b/Umbrella/Umbrella/Umbrella.csproj
@@ -4,17 +4,20 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <StartupObject>Umbrella.Program</StartupObject>
+    <UserSecretsId>9ab59fc0-86c5-4b32-845c-76ac384a6495</UserSecretsId>
+    <ApplicationIcon />
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+    <PackageReference Include="BundlerMinifier.Core" Version="3.2.449" />
     <PackageReference Include="BundlerMinifier.TagHelpers" Version="3.2.449" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.18" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\bundles\" />
     <Folder Include="wwwroot\views\Home\" />
   </ItemGroup>
 
