--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Umbrella/Umbrella/appsettings.json
 Umbrella/Umbrella/appsettings.Development.json
 Umbrella/Umbrella/bin/Debug/*
+Umbrella/Umbrella/obj/Debug/netcoreapp3.1/*
