--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Umbrella/Umbrella/obj/Debug/netcoreapp3.1/*
 Umbrella/Umbrella/obj/Debug/netcoreapp3.1/Umbrella.assets.cache
 Umbrella/Umbrella/obj/Debug/netcoreapp3.1/Umbrella.csproj.FileListAbsolute.txt
 Umbrella/Umbrella/obj/Debug/netcoreapp3.1/Umbrella.Views.dll
+Umbrella/.vs/Umbrella/v16/.suo
